# laba2_OOP

./: CMakeLists.txt  four.cpp  four.h  four_test.cpp
